2007-08-06  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/patterns/Latn-en.hearing-impaired.in:
	Change pattern to allow digits and spaces.

	* gaupol/gtk/assistants/text/assistant.py (_on_apply):
	Set the mouse pointer busy while working.

2007-08-06  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/util.py (notify_frozen):
	Wrap function call in a try-finally to always thaw.

2007-08-06  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/assistants/text/assistant.py (_init_size):
	Make the assistant a bit (two text lines) taller.

2007-08-06  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/assistants/text/assistant.py (_on_apply):
	Count edits and removals and flash a message in the statusbar.

2007-08-06  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/parser.py (_shift_tags):
	Partially rewrite and add proper comments.

2007-08-05  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/assistants/text/hearing.py:
	* gaupol/patternman.py:
	Fix PatternManager code handling to keep track of parent codes
	and write configurations to files matching pattern files.
	Sort entries HearingImpairedPage combo boxes.

2007-08-05  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/actions/text.py (CorrectTextsAction):
	Fix label to use title case and add ellipsis.

2007-08-05  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/main.py:
	Bump Python dependency to 2.5.1 (#9685).

2007-08-05  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/patterns/Latn-en.hearing-impaired.conf:
	* data/patterns/Latn-en.hearing-impaired.in:
	* data/patterns/Latn.hearing-impaired.conf:
	* data/patterns/Latn.hearing-impaired.in:
	Fix patterns based on crude test case results.

	* gaupol/agents/util.py (get_parser):
	Add redundant_func argument.

	* gaupol/finder.py (set_regex):
	Fix default_flags argument to actually work (again).

	* gaupol/parser.py:
	(_shift_tags): Try to fix when shift is negative.
	(get_text): Remove redundant tags.

	* gaupol/tags/subrip.py (remove_redundant):