@@ -17,7 +17,7 @@ Gaupol 0.9
 Gaupol 1.0
 ==========
 
- * Fix errors (text assistan task)
+ * Fix errors (text assistant task)
  * Capitalize (text assistant task)
  * Format lines (text assistant task)
 
